Added tracing-flask.py and its Dockerfile and boot-flask.sh

--- a/Dockerfile.helloworld
+++ b/Dockerfile.helloworld
@@ -9,8 +9,8 @@ COPY requirements requirements
 #RUN venv/bin/pip install -r requirements/common.txt
 RUN pip install -r requirements/common.txt
 
-COPY tracing-agent.py tracing-flask.py boot.sh ./
+COPY tracing-agent.py boot.sh ./
 
 # run-time configuration
-EXPOSE 5000
-ENTRYPOINT ["./boot-flask.sh"]
+# EXPOSE 5000
+ENTRYPOINT ["./boot.sh"]
