Added concurrency control into knative deployment and logging in jaeger deployment

--- a/knative/otel-flask-knative-service.yaml
+++ b/knative/otel-flask-knative-service.yaml
@@ -5,7 +5,11 @@ metadata:
   namespace: knative-demo
 spec:
   template:
+    metadata:
+      annotations:
+        autoscaling.knative.dev/targetUtilizationPercentage: "80"
     spec:
+      containerConcurrency: 10
       containers:
         - image: docker.io/haoruibing/otel-flask:latest
           ports:
