added yaml to deploy otel sidecar for auto injection

--- a/kubernetes/otel2-flask-deployment.yaml
+++ b/kubernetes/otel2-flask-deployment.yaml
@@ -4,7 +4,6 @@ metadata:
   annotations:
     kompose.cmd: kompose convert -f docker-compose.dev.yml
     kompose.version: 1.22.0 (955b78124)
-    sidecar.opentelemetry.io/inject: "true"
   creationTimestamp: null
   labels:
     io.kompose.service: otel2-flask
@@ -27,6 +26,9 @@ spec:
       containers:
         - image: docker.io/haoruibing/otel-flask
           name: otel2-flask
+          metadata:
+            annotations:
+              sidecar.opentelemetry.io/inject: "true"
           ports:
            - containerPort: 5000 
       restartPolicy: Always
