Modify otel side car to listen for thrift_compact

--- a/kubernetes/otel-agent-sidecar.yaml
+++ b/kubernetes/otel-agent-sidecar.yaml
@@ -8,7 +8,7 @@ spec:
     receivers:
       jaeger:
         protocols:
-          grpc:
+          thrift_compact:
     processors:
 
     exporters:
