--- a/kubernetes/otel-flask-deployment.yaml
+++ b/kubernetes/otel-flask-deployment.yaml
@@ -10,7 +10,7 @@ metadata:
     io.kompose.service: otel-flask
   name: otel-flask
 spec:
-  replicas: 3
+  replicas: 1
   selector:
     matchLabels:
       io.kompose.service: otel-flask
@@ -27,6 +27,13 @@ spec:
       containers:
         - image: docker.io/haoruibing/otel-flask
           name: otel-flask
+          env:
+           - name: SERVICE_NAME
+             value: "otel-flask-env1"
+           - name: AGENT_HOST
+             value: "localhost"
+           - name: AGENT_PORT
+             value: "6831"
           ports:
            - containerPort: 5000 
       restartPolicy: Always
