--- a/otel-sidecar/otel-agent-sidecar.yaml
+++ b/otel-sidecar/otel-agent-sidecar.yaml
@@ -9,6 +9,13 @@ spec:
       jaeger:
         protocols:
           thrift_compact:
+      prometheus:
+        config:
+          scrape_configs:
+            - job_name: 'otel-collector'
+              scrape_interval: 5s
+              static_configs:
+                - targets: ['0.0.0.0:9000']
     processors:
 
     exporters:
